Fix letter-spacing 2

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -59,8 +59,12 @@ input {
   font-size: 42px;
   text-align: center;
   padding: 10% 0 30px 0;
+}
+.logo-start {
   letter-spacing: 22px;
-  margin-right: -22px;
+}
+.logo-end {
+  letter-spacing: normal
 }
 .nav {
   width: 700px;
